--- a/css/carousel.css
+++ b/css/carousel.css
@@ -57,7 +57,6 @@
 /* Carousel caption (also see image caption) */
 .carousel .carousel-item .carousel-caption{
 	text-align: center;
-	/* line-height: 1.5rem; */
 	margin: 0 .5rem;
 	padding: 0;
 	position: absolute;
@@ -79,7 +78,8 @@
 	display: inline-block;
 }
 .carousel .carousel-item .carousel-caption a{
-	/* font-size: 1rem; */
+	font-size: .95rem;
+	line-height: 1.5rem;
 	text-decoration: underline;
 	color: #fff;
 	background-color: rgba(0, 0, 0, 0.65);
