--- a/css/cluster.css
+++ b/css/cluster.css
@@ -140,6 +140,7 @@
 }
 /* the heading on the cluster page title slide */
 .cluster main section h2#level-2-title{
+	font-size: 1.6rem;
 	white-space: nowrap;
 	border: 3px solid #fff;
 	-webkit-border-radius: 5px;
@@ -157,7 +158,7 @@
 }
 /* the main subsection heading; this indicates the cluster series to which a content page belongs */
 .cluster main section h3{
-	font-size: 1.3rem;
+	font-size: 1.35rem;
 	font-weight: 600;
 	font-variant: normal;
 	color: #fff;
@@ -240,7 +241,7 @@
 /* the label that appears over each cluster page slide image */
 /* some specs below derive from Livingstone Online level two slides; see, e.g., https://livingstoneonline.org/spectral-imaging */
 .cluster main section div span{
-	font-size: 1.05rem;
+	font-size: 1.1rem;
 	line-height: 1.5rem;
 	color: #fff;
 	background-color: rgb(66,66,66);
@@ -292,7 +293,7 @@
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
-	margin: 1.25rem 0;
+	margin: 1rem 0 1.25rem;
 	padding: .3rem;
 	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
@@ -307,7 +308,7 @@
 /* the first item in the list of lesson plan buttons that appears on collective lesson plan slides; this item serves as the title for the collective lesson plan slides */
 /* note: the coding on this should be changed to support accessibility */
 .cluster main section ul li:first-child{
-	/* font-size: 1rem; */
+	font-size: 1.1rem;
 	font-family: 'Source Serif Pro', serif;
 	font-weight: 600;
 	background: #e6e6e6;
