--- a/css/temp.css
+++ b/css/temp.css
@@ -27,9 +27,9 @@
 .content main .aspect-ratio-box .caption{
 	font-size: 1.7rem;
 }
-.content main h2{
+/* .content main h2{
 	font-size: 1.8rem;
-}
+} */
 .content main h2#error404{
 	font-size: 2.5rem;
 }
@@ -41,9 +41,9 @@
 		font-size: 3rem;
 	}
 }
-.content main h3{
+/* .content main h3{
 	font-size: 1.4rem;
-}
+} */
 .content h3#user-guide{
 	font-size: 1.2rem;
 }
@@ -255,3 +255,6 @@ section section .timeline-content h4{
 	padding: .3rem;
 	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
+
+
+
