--- a/css/content.css
+++ b/css/content.css
@@ -434,6 +434,11 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 		width: 25%;
 	}
 }
+/* padding for all lists */
+.content ol,
+.content ul {
+  padding-left: 1.2rem;
+}
 /* spacing for lists and list items that follow sub-subsection headings */
 .content h5 + ol,
 .content h5 + ul{
@@ -455,10 +460,11 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 /* sublists and sub-sublists on sitemap page */
 .content.sitemap ol li ol{
 	list-style: lower-alpha;
-	padding-left: 1.4rem;
+	padding-left: 1rem;
 }
 .content.sitemap ol li ol li ol{
 	list-style: lower-roman;
+	padding-left: 1.2rem;
 }
 @media only screen and (min-width: 768px){
 	.content.sitemap ol li ol{
