--- a/css/content.css
+++ b/css/content.css
@@ -295,6 +295,11 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 	color: #242424;
 	text-align: left;
 }
+@media only screen and (min-width: 480px){
+	.content h3#user-guide{
+		font-size: 1.3rem;
+	}
+}
 /* sub-subsections headings */
 .content main h4{
 	text-align: left;
@@ -357,6 +362,7 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 /* email hyperlink in "Production Details" section */
 .content main .specs .specs-container a.mail,
 .content main .specs .specs-container a.mail:visited{
+	font-size: 1rem;
 	text-decoration: none;
 	padding: 0 5px;
 }
@@ -381,7 +387,7 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 	counter-increment: items;
   content: counter(items) ") ";
 }
-/* main container for content page menu */
+/* main container for page menu */
 .content section.menu-container{
 	text-align: center;
 	border: 1px solid #949494;
@@ -390,16 +396,21 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 	display: inline-block;
 	box-sizing: border-box;
 }
-/* ordered list of subsections in content page menu */
+/* ordered list of subsections in page menu */
 .content ol.menu{
 	/* font-size: 1rem; */
 	margin: 1rem auto 0;
 	padding-left: 1.2rem;
 	display: inline-block;
 }
-/* ordered list of sub-subsections in content page menus */
+/* item in ordered list of subsections in page menu */
+.content ol.menu li{
+	margin-bottom: .3rem;
+}
+/* ordered list of sub-subsections in page menu */
 .content ol.menu li ol{
 	list-style: lower-alpha;
+	margin-top: .5rem;
 	padding-left: 1rem;
 }
 @media only screen and (min-width: 768px){
@@ -410,6 +421,9 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 /* various kinds of lists */
 .content section ul#topic-list{
 	padding: 0 0 0 1.2rem;
+}
+.content section ul#topic-list li{
+	margin-bottom: .25rem;
 }
 .content.about section ul{
 	list-style: none;
@@ -425,7 +439,7 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 }
 /* paragraph preceded by a heading */
 .content section h3 + p{
-	margin: .5rem 0 0;
+	margin: 1rem 0 0;
 }
 /* founding devs. and associate/assistant eds. images */
 /* note: for these images use 285/356 as cropping ratio (= 80.01) */
@@ -463,6 +477,18 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 	.content ul {
 		padding-left: 1.4rem;
 	}	
+}
+/* margin for all list items */
+.content li,
+.content li{
+	margin-bottom: .5rem;
+}
+/* list of texts */
+ol.text-list,
+ul.text-list{
+	list-style: none; 
+	margin-bottom: 0; 
+	padding-left: 0
 }
 /* endnote lists */
 .content ol.endnotes,
