--- a/css/timeline.css
+++ b/css/timeline.css
@@ -13,13 +13,13 @@
 	display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: .75rem;
+  gap: 0 .75rem;
 }
 /* box sizing */
 /* main container */
 #timeline-container{
   margin: 2rem auto;
-  padding: 1rem 0;
+  /* padding: 1rem 0; */
   position: relative;
   overflow: hidden;
 }
@@ -70,23 +70,23 @@
   }
 }
 /* reduces margin at top of timeline */
-section section .timeline-block:first-of-type{
+/* section section .timeline-block:first-of-type{
   margin-top: -2rem;
 }
 @media only screen and (min-width: 624px){
   section section .timeline-block:first-of-type{
     margin-top: -1rem;
   }
-}
+} */
 /* reduces margin at bottom of timeline */
-section section .timeline-block:last-of-type{
+/* section section .timeline-block:last-of-type{
   margin-bottom: -2rem;
 }
 @media only screen and (min-width: 624px){
   section section .timeline-block:last-of-type{
     margin-bottom: -1rem;
   }
-}
+} */
 /* all timeline items on right side */
 section section .timeline-block-right{
   float: none;
@@ -158,6 +158,11 @@ section section .timeline-content h4{
   text-transform: none;
   direction: ltr;
   margin: 0;
+}
+@media only screen and (min-width: 480px){
+  section section .timeline-content h4{
+    font-size: 1.4rem;
+  }
 }
 section section .timeline-block-right h4{
   color: #404A54;
