--- a/css/index.css
+++ b/css/index.css
@@ -117,6 +117,11 @@
 	-moz-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
 }
+@media only screen and (min-width: 624px){
+	.section-tiles ul li a span{
+		font-size: 1.45rem;
+	}
+}
 /* container for "Founding Developers" section */
 .founding-dev{
 	margin: 0 auto;	
