--- a/css/content.css
+++ b/css/content.css
@@ -274,7 +274,7 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 @media only screen and (min-width: 768px){
 	.content main h2{
 		font-size: 2.75rem;
-		/* line-height: 3.5rem; */
+		line-height: 3.3rem;
 	}
 	.content main h2#error404{
 		/* font-size: 2.8rem; */
@@ -288,6 +288,11 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 @media only screen and (min-width: 480px){
 	.content main h3{
 		font-size: 1.5rem;
+	}
+}
+@media only screen and (min-width: 768px){
+	.content main h3{
+		font-size: 1.6rem;
 	}
 }
 .content section.menu-container h3{
@@ -398,7 +403,7 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 	text-align: center;
 	border: 1px solid #949494;
 	margin: 0;
-	padding: 1.5rem 2rem 2rem;
+	padding: 2rem;
 	display: inline-block;
 	box-sizing: border-box;
 }
@@ -416,7 +421,7 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 /* ordered list of sub-subsections in page menu */
 .content ol.menu li ol{
 	list-style: lower-alpha;
-	margin-top: .5rem;
+	margin-top: .25rem;
 	padding-left: 1rem;
 }
 @media only screen and (min-width: 768px){
@@ -435,6 +440,11 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 	list-style: none;
 	margin: 1rem 0 1rem 1.2rem;
 	padding: 0;
+}
+@media only screen and (min-width: 624px){
+	.content.about section ul{
+		margin: 1rem 0;
+	}
 }
 .content.about.values section ul{
 	list-style: inherit;
