--- a/css/cluster.css
+++ b/css/cluster.css
@@ -161,6 +161,11 @@
 		font-size: 1.9rem;
 	}
 }
+@media only screen and (min-width: 992px){
+	.cluster main section h2#level-2-title{
+		font-size: 2.1rem;
+	}
+}
 /* the main subsection heading; this indicates the cluster series to which a content page belongs */
 .cluster main section h3{
 	font-size: 1.35rem;
@@ -182,6 +187,11 @@
 @media only screen and (min-width: 768px){
 	.cluster main section h3{
 		font-size: 1.45rem;
+	}
+}
+@media only screen and (min-width: 992px){
+	.cluster main section h3{
+		font-size: 1.5rem;
 	}
 }
 /* the descriptive text on the zoomcasts cluster page title slide */
@@ -279,8 +289,13 @@
 }
 @media only screen and (min-width: 768px){
 	.cluster main section div span{
-		font-size: 1.25rem;
+		font-size: 1.2rem;
 		padding: .5rem .25rem;
+	}
+}
+@media only screen and (min-width: 992px){
+	.cluster main section div span{
+		line-height: 1.55;
 	}
 }
 /* the descriptive text below each cluster page slide image */
@@ -292,6 +307,11 @@
 .cluster.zoomcasts main section p{
 	/* line-height: 1.875rem; */
 	margin: 0 .5rem 1rem;
+}
+@media only screen and (min-width: 768px){
+	.cluster.zoomcasts main section p{
+		line-height: 1.75rem;
+	}	
 }
 /* the list of lesson plan buttons that appears on collective lesson plan slides */
 /* note: although this coding is set up for general use, at present it is only used on /html/lesson_plans.html */
@@ -358,6 +378,12 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+}
+@media only screen and (min-width: 992px){
+	.cluster main section ul li a,
+	.cluster main section ul li a:visited{
+		line-height: 1.7rem;
+	}
 }
 .cluster main section ul li:not(:first-child):hover,
 .cluster main section ul li:not(:first-child):focus-within,
