--- a/css/content.css
+++ b/css/content.css
@@ -288,7 +288,7 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 @media only screen and (min-width: 992px){
 	.content main h2{
 		font-size: 3rem;
-		/* line-height: 3.3rem; */
+		line-height: 3.75rem;
 	}
 	.content main h2#error404{
 		font-size: 3.4rem;
@@ -439,11 +439,11 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 	margin-top: .25rem;
 	padding-left: 1rem;
 }
-@media only screen and (min-width: 768px){
+/* @media only screen and (min-width: 768px){
 	.content ol.menu li ol{
 		padding-left: revert;
 	}
-}
+} */
 /* various kinds of lists */
 .content section ul#topic-list{
 	padding: 0 0 0 1.2rem;
@@ -455,11 +455,6 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 	list-style: none;
 	margin: 1rem 0 1rem 1.2rem;
 	padding: 0;
-}
-@media only screen and (min-width: 624px){
-	.content.about section ul{
-		margin: 1rem 0;
-	}
 }
 .content.about.values section ul{
 	list-style: inherit;
