--- a/css/timeline.css
+++ b/css/timeline.css
@@ -18,14 +18,14 @@
 /* box sizing */
 /* main container */
 #timeline-container{
-  margin: 2rem auto;
+  margin: 1.5rem auto;
   /* padding: 1rem 0; */
   position: relative;
   overflow: hidden;
 }
 @media only screen and (min-width: 624px){
   #timeline-container{
-    margin: 3rem auto;
+    /* margin: 3rem auto; */
     padding: 1rem 0;
   }
 }
@@ -163,6 +163,11 @@ section section .timeline-content h4{
 @media only screen and (min-width: 480px){
   section section .timeline-content h4{
     font-size: 1.4rem;
+  }
+}
+@media only screen and (min-width: 992px){
+  section section .timeline-content h4{
+    font-size: 1.65rem;
   }
 }
 section section .timeline-block-right h4{
