--- a/css/youtube.css
+++ b/css/youtube.css
@@ -123,7 +123,7 @@
 }
 @media only screen and (min-width: 768px){
 	.skipcontrols a{
-		/* font-size: 1rem; */
+		font-size: 1rem;
 	}
 }
 .skipcontrols a{
