--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 /* This CSS file has been created by Adrian S. Wisnicki (2020-2023) and is adapted from the CSS files for One More Voice (https://onemorevoice.org/) and Fieldwork of Empire (https://awisnicki.github.io/fieldwork_of_empire/). */
 /* This CSS file, like the ones from which it is adapted, is released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). Please feel free to reuse the present code, but be sure to attribute it properly and publicly on your site.  */
-/* This is the main CSS file for Undisciplining the Victorian Classroom (UVC) site (https://undiscipliningvc.org/). It encompasses styling that is common across all pages of the site, including coding for files that constitute the first level of the UVC site: /404.html, /index.html, and /sitemap.html */
+/* This is the main CSS file for Undisciplining the Victorian Classroom (UVC) site (https://undiscipliningvc.org/). It encompasses styling that is common across all pages of the site */
+/* For further information about UVC files in general, see https://github.com/undiscipliningvc/undiscipliningvc.  */
+
+/* Main CSS File */
 
 /* 
 Table of Contents
