--- a/css/content.css
+++ b/css/content.css
@@ -1,7 +1,10 @@
-/* 1.2.3. Content Pages */
 /* This CSS file has been created by Adrian S. Wisnicki (2020-2023). For further information about the Undisciplining the Victorian Classroom (UVC) CSS files, see /css/style.css */
 /* This CSS file, like the ones from which it is adapted, is released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). Please feel free to reuse the present code, but be sure to attribute it properly and publicly on your site.  */
-/* Content pages constitute the third level of the UVC site and consist of the generally text-heavy files that present individual Zoomcasts, lesson plans, syllabi, assessments, various parts of the "About" section, the sitemap, and the 404 page. Except for the last two named files, the files are found in the following directories: /html/about, /html/assessments, /html/lesson_plans, /html/syllabi, and /html/zoomcasts */
+/* Content pages constitute the third level of the UVC site and consist of the generally text-heavy files that present individual Zoomcasts, lesson plans, syllabi, assessments, various parts of the "About" section, the sitemap, and the 404 page. Except for the last two named files (which are located in the root directory), the files are found in the following directories: /html/about, /html/assessments, /html/lesson_plans, /html/syllabi, and /html/zoomcasts */
+/* For further information about the UVC CSS files, see /css/style.css. For further information about UVC files in general, see https://github.com/undiscipliningvc/undiscipliningvc.  */
+
+
+/* 1.2.3. Content Pages */
 
 /* section-specific colors, in particular for the colored divider line at the top of content pages and menu heading background */
 /* for further section-specific color specs, see /css/cluster.css, /css/index.css, and /css/style.css */
